@@ -39,3 +39,7 @@ ALTER TABLE domain_phishing ADD PRIMARY KEY (id);
 DROP TABLE IF EXISTS domain_nameserver;
 CREATE TABLE domain_nameserver () INHERITS (domain);
 ALTER TABLE domain_nameserver ADD PRIMARY KEY (id);
+
+DROP TABLE IF EXISTS domain_spamvertising;
+CREATE TABLE domain_spamvertising () INHERITS (domain);
+ALTER TABLE domain_spamvertising ADD PRIMARY KEY (id);
